# p25-hackathon

./: README.md
p25-hackathon/: README.md  pyproject.toml
p25-hackathon/src/p25_hackathon/: cli.py  grid.py  interface.py  livingbeings.py  main.py  simulation.py
