[project]
name = "p25-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Loris Lepage", email = "lepage.loris@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
p25-hackathon = "p25_hackathon.main:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
