[project]
name = "p25-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Loris Lepage", email = "lepage.loris@icloud.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
p25-hackathon = "p25_hackathon.main:main"
p25-hackathon-entities = "p25_hackathon.entities:main"
p25-hackathon-grid = "p25_hackathon.grid:main"
p25-hackathon-simulation = "p25_hackathon.simulation:main"
p25-hackathon-cli = "p25_hackathon.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]
